@@ -110,7 +110,6 @@ SOFTWARE.
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-log4j12</artifactId>
-      <version>1.7.31</version>
       <scope>test</scope>
     </dependency>
     <dependency>
